--- a/MedAlert/package.json
+++ b/MedAlert/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
+    "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.7"
   },
